--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "edin93",
+  "build": "webpack",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.21.2",
