--- a/Webpack/task_2/package.json
+++ b/Webpack/task_2/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "jquery": "^3.7.1",
