--- a/Webpack/task_2/package.json
+++ b/Webpack/task_2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task_1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
@@ -19,5 +20,6 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "lodash": "^4.17.20"
-  }
+  },
+  "description": ""
 }
