--- a/react_intro/task_5/dashboard/package.json
+++ b/react_intro/task_5/dashboard/package.json
@@ -13,10 +13,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server --mode development --config config/webpack.config.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
